fix(form-component): dropbox z-index 추가, mui icon 추가

--- a/frontend/src/components/Form/DropDown/index.module.scss
+++ b/frontend/src/components/Form/DropDown/index.module.scss
@@ -1,5 +1,5 @@
-@import '@/components/Form/index.scss';
-@import '@/styles/_variables';
+@use '@/components/Form/index.scss' as *;
+@use '@/styles/variables' as *;
 
 @mixin text-style {
   text-align: start;
@@ -9,6 +9,10 @@
 .label {
   @include form;
   @include text-style;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 
   background-color: $white;
   padding: 0 16px;
@@ -21,17 +25,19 @@
 
 .optionList {
   @include form;
-
   background-color: $white;
   overflow: hidden;
   width: 100%;
-  height: 100%;
+  height: auto;
+
+  z-index: 1;
+  position: absolute;
 
   .optionItem {
     @include text-style;
 
     width: 100%;
-    height: 40px;
+    min-height: 40px;
 
     padding: 0 16px;
 
