--- a/frontend/src/components/Form/Input/index.module.scss
+++ b/frontend/src/components/Form/Input/index.module.scss
@@ -1,5 +1,5 @@
-@import '@/styles/_variables';
-@import '@/components/Form/index.scss';
+@use '@/styles/variables' as *;
+@use '@/components/Form/index.scss' as *;
 
 .inputBox {
   @include form;
@@ -7,7 +7,8 @@
 
   &.invalid {
     border: $red-300 1px solid;
-    &::placeholder{
+
+    &::placeholder {
       color: $red-300;
     }
   }
